Feat/103 comprehensive update bookmark (#124)
* feat: add BaseEntity

* fix: fixed errors related to entity

* feat: add bookmark status when returning to market

* feat: bookmark in con list page

* feat: bookmark in bookmark list page

* fix: reflects missing updates due to conflicts